# liveRAID

./: CODE_INDEX.md  LICENSE  README.md  backend.py  bootstrap.sh  installer.sh  main.py  ui.py
raidctl/: Cargo.toml
raidctl/raidctl-cli/: Cargo.toml
raidctl/raidctl-cli/src/: main.rs
raidctl/raidctl-core/: Cargo.toml
raidctl/raidctl-core/src/: lib.rs
raidctl/raidctl-gui/: Cargo.toml
raidctl/raidctl-gui/src/: main.rs  main_corrupted.rs
