[workspace]
members = [
    "raidctl-core",
    "raidctl-cli",
    "raidctl-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RAID Provisioning Tool Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/raidctl"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
