[package]
name = "raidctl-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
