[package]
name = "raidctl-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22"
egui = "0.22"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
raidctl-core = { path = "../raidctl-core" }
